--- a/ChessPuzzles/packages.config
+++ b/ChessPuzzles/packages.config
@@ -3,4 +3,5 @@
   <package id="angularjs" version="1.2.18" targetFramework="net45" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="1.3.4" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.1.3" targetFramework="net45" />
+  <package id="RequireJS" version="2.1.14" targetFramework="net45" />
 </packages>
